store/layout/lrs: add serialization in the message protocol
Using protobuf-c, the requests and responses sent from/to the store
and the lrs are now serialized in a char buffer and deserialized
once received.

The 'proto' directory contains the protobuf files which are compiled
using the 'protoc-c' command at the start of phobos compilation.

The 'serializer' directory contains the protobuf structure helpers
for:
    - allocation/deallocation
    - packing/unpacking

Change-Id: I30979ebc073944677e0382323978e81762b57a68
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/5096
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Tested-by: Florent Monjalet <florent.monjalet@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -76,6 +76,7 @@ AC_CHECK_HEADERS([ini_config.h], [], [AC_MSG_ERROR(missing libini_config header 
 AC_CHECK_HEADERS([openssl/sha.h], [], [AC_MSG_ERROR(missing openssl libcrypt header files)])
 AC_CHECK_HEADERS([attr/xattr.h], [], [AC_MSG_ERROR(missing libattr header files)])
 AC_CHECK_HEADERS([scsi/sg_io_linux.h], [], [AC_MSG_ERROR(missing sg3_utils header files)])
+AC_CHECK_HEADERS([protobuf-c/protobuf-c.h], [], [AC_MSG_ERROR(missing protobuf-c header files)])
 PKG_CHECK_MODULES(JANSSON, [jansson >= 2.5])
 PKG_CHECK_MODULES(LIBPQ, [libpq >= 9.4])
 
@@ -89,6 +90,7 @@ AC_SUBST(ac_configure_args)
 
 AC_CONFIG_FILES([Makefile
          src/Makefile
+         src/proto/Makefile
          src/include/Makefile
          src/common/Makefile
          src/ldm/Makefile
@@ -97,6 +99,7 @@ AC_CONFIG_FILES([Makefile
          src/lrs/Makefile
          src/io/Makefile
          src/layout/Makefile
+         src/serializer/Makefile
          src/store/Makefile
          src/layout-modules/Makefile
          src/tests/Makefile
