--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS= $(CC_OPT)
 
-SUBDIRS=proto include common ldm dss cfg lrs io layout serializer store \
-	layout-modules cli tests
+SUBDIRS=proto include common communication ldm dss cfg lrs io layout \
+	serializer store layout-modules cli tests
