tests: add valgrind run during test processing
By running make check-valgrind, all the tests are launched using
valgrind and are marked as FAIL if a definite memory leak is found.

For now, only memcheck tool is used. But other tools can be enabled by
modifying the configure.ac file and commenting the appropriate
AX_VALGRIND_DFLT(...) line(s).

The check results are then available in
src/tests/test-suite-memcheck.log.

PS: with valgrind, acceptance.sh takes >7 min to run.

Change-Id: Id56f9e88444b8277290447d6927c5b65baaccef7
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/5132
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -22,6 +22,11 @@ AC_PREFIX_DEFAULT([/usr])
 
 AC_GNU_SOURCE
 
+AX_VALGRIND_DFLT([helgrind],[off])
+AX_VALGRIND_DFLT([drd],[off])
+AX_VALGRIND_DFLT([sgcheck],[off])
+AX_VALGRIND_CHECK
+
 # only generate dynamic libs (used in LD_PRELOAD)
 AC_ENABLE_STATIC(no)
 # disable shared libraries generation
