--- a/src/tests/phobos.conf
+++ b/src/tests/phobos.conf
@@ -1,6 +1,9 @@
 [dss]
 connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
+[lrs]
+server_socket = /tmp/socklrs
+
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
 
