--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -1,5 +1,15 @@
 AM_CFLAGS= $(CC_OPT)
 
-noinst_LTLIBRARIES=libpho_lrs.la
+sbin_PROGRAMS=phobosd
 
-libpho_lrs_la_SOURCES=lrs.c lrs_cfg.h lrs_cfg.c lrs_sched.h lrs_sched.c
+unitdir=`pkg-config systemd --variable=systemdsystemunitdir`
+unit_files=phobosd.service
+unit_DATA=$(unit_files)
+EXTRA_DIST=$(unit_files)
+
+phobosd_SOURCES=lrs.c lrs_cfg.h lrs_cfg.c lrs_sched.h lrs_sched.c
+phobosd_CFLAGS=$(AM_CFLAGS)
+phobosd_LDADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la ../ldm/libpho_ldm.la \
+	      ../io/libpho_io.la ../serializer/libpho_serializer.la \
+	      ../communication/libpho_comm.la ../common/libpho_common.la
+phobosd_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
