lrs sched : add split feature for simple and raid1_repl_1 layout
Change-Id: I09cd4f21b3dc299048cabcdd75fdbd4aaf5aa8fe
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6391
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -14,7 +14,7 @@ UNIT_TESTS=test_common test_attrs test_mapper test_log test_cfg test_dev_tape \
 
 # 2nd step: integration tests
 INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh \
-	    test_store_retry.sh
+	    test_store_retry.sh simple_split.sh raid1_simple_split.sh
 
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
