cli: merge list and show commands
Commands list and show were designed to nearly do the same thing, with
list printing every device's or medium's label and show outputting the
whole set of attributes of given targets.

Now they are merged into a single list command which can:
- target a single resource, a set of resources or every resource;
- output any set of attributes of the targeted resources (from
  label to the whole parameters);
- output results in various formats (human, csv, json, yaml, xml);
- select targets depending on their model (for devices) or their tags
  (for media).

Change-Id: I0a7edcec87b9f9d05fe66e605caedf6126a755c5
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6492
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -33,6 +33,7 @@ Requires: python-argparse
 Requires: python-yaml
 Requires: clustershell
 Requires: python-psycopg2
+Requires: python2-tabulate
 Requires: protobuf
 Requires: protobuf-c
 
