phobosd: allow the utilization of multiple schedulers
Until now, the daemon could only manage one family of resources (tape or
directory) at a time. This family was defined using the
PHOBOS_LRS_default_family env variable.

Instead of setting only one scheduler, the daemon can now initialize a
scheduler per family, depending on those requested using the
PHOBOS_LRS_families env variable.

Users can now indicate to which family they send their data using the
PHOBOS_STORE_default_family env variable. This piece of information is
now a part of the write alloc request protocol.

Change-Id: I7851edddc8786b15e1df697d366834c4bf35b66f
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6547
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -4,15 +4,15 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [lrs]
 # prefix to mount phobos filesystems
-mount_prefix   = /mnt/phobos-
+mount_prefix  = /mnt/phobos-
 # media selection policy: first_fit or best_fit
-policy         = best_fit
-# default media family to put data (for now, 'dir' or 'tape')
-default_family = tape
+policy        = best_fit
+# handled resource families (comma-separated list without any space)
+families      = tape,dir
 # path of SCSI library control device
-lib_device     = /dev/changer
+lib_device    = /dev/changer
 # path of the LRS-server socket
-server_socket  = /run/phobosd/lrs
+server_socket = /run/phobosd/lrs
 
 [scsi]
 # retry count for SCSI requests
@@ -38,7 +38,9 @@ cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 
 [store]
 # default layout for put operations
-layout = simple
+default_layout = simple
+# default resource family for put operations
+default_family = tape
 
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
