make: fix 'warning: jobserver [...] Add + to parent make rule
According to the documentation, this warning means that the parent
process does not know that the child is a make process, and can not
communicate with it. This is easily fixed by replacing all 'make'
commands in Makefile.am by $(MAKE).

Change-Id: Ie36f55880a470b334185af015994d542c3dbe745
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6658
Reviewed-by: Linter
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -13,4 +13,4 @@ noinst_HEADERS=pho_cfg.h pho_comm.h pho_common.h pho_dss.h pho_io.h \
 include_HEADERS=pho_attrs.h phobos_store.h phobos_admin.h
 
 $(proto_headers): %.pb-c.h: $(protodir)/%.proto
-	make -C $(protodir) gen-proto
+	$(MAKE) -C $(protodir) gen-proto
