--- a/src/proto/Makefile.am
+++ b/src/proto/Makefile.am
@@ -12,10 +12,10 @@ proto_headers=$(incdir)/pho_proto_common.pb-c.h $(incdir)/pho_proto_lrs.pb-c.h
 proto_sources=$(srldir)/proto_common.pb-c.c $(srldir)/proto_lrs.pb-c.c
 
 $(proto_headers): $(incdir)/%.pb-c.h: %.proto
-	make gen-proto
+	$(MAKE) gen-proto
 
 $(proto_sources): $(srldir)/%.pb-c.c: pho_%.proto
-	make gen-proto
+	$(MAKE) gen-proto
 
 gen-proto:
 	protoc-c --c_out=. ${libpho_proto_la_SOURCES}
