--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -15,7 +15,7 @@ UNIT_TESTS=test_common test_attrs test_mapper test_log test_cfg test_dev_tape \
 # 2nd step: integration tests
 INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh	\
 	    test_store_retry.sh simple_split.sh raid1_simple_split.sh 	\
-	    raid1_split.sh test_bad_comm.sh
+	    raid1_split.sh test_bad_comm.sh test_resource_availability.sh
 
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
