README.md: compliance with the mobile version of github
The mobile version of github does not properly manage symlinks
in the repository: clicking on the button to view the full doc
results in displying the raw contents of the symlink...
This replaces the symlink with the real contents of the file,
nevermind if this document is not in the actual doc directory...

Change-Id: I90f678eba6c885af7b0dfbf5fe2823242a13f753
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6711
Reviewed-by: Linter
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ rpm: dist phobos.spec
 	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
-	    scripts/phobos_db doc/README.md doc/cfg/template.conf ChangeLog
+	    scripts/phobos_db README.md doc/cfg/template.conf ChangeLog
 
 sbin_SCRIPTS=scripts/pho_ldm_helper \
              scripts/phobos_db
