Remove hardcoded 'python' from Makefile
Use $(PYTHON) variable instead.

Change-Id: I32c80385da4d2e552c7f1a6cc7d51d24276e9f1c
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6722
Reviewed-by: Linter
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -28,7 +28,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   setup.py
 
 all-local:
-	python setup.py build --verbose
+	$(PYTHON) setup.py build --verbose
 
 clean-local:
 	rm -f $(C_MODULES_SO)
