Explicit use of python2
Phobos code is currently based on python2.
Explicitely use this version on python to be compliant with systems where
python3 is the default.

Change-Id: I48784d76117f27b65861bd8fa1fddac4ead16db7
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6726
Reviewed-by: Linter
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -9,6 +9,7 @@ URL:     http://www-hpc.cea.fr
 Source0: %{name}-%{version}.tar.gz
 
 %define phobosdocdir %{_docdir}/%{name}
+%define __python /usr/bin/python2
 
 BuildRequires: postgresql94-devel
 BuildRequires: glib2-devel >= 2.28
