build: fix parallel make
The protobuf command builds multiple outputs and should not be run in
parallel.
Follow recommendations in the manual to run the command once.

Link: https://www.gnu.org/software/automake/manual/html_node/Multiple-Outputs.html

Change-Id: Id8a1cf98d67d6ecba3cf1ebb4b1cd711c7e0ea3f
Signed-off-by: Dominique Martinet <dominique.martinet@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/7283
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,6 +1,6 @@
 SUFFIXES = .pb-c.h
 
-protodir=$(top_srcdir)/src/proto
+protodir=../proto
 proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h
 noinst_HEADERS=pho_cfg.h pho_comm.h pho_common.h pho_dss.h pho_io.h \
 	       pho_layout.h pho_ldm.h pho_mapper.h pho_srl_common.h \
@@ -13,5 +13,7 @@ noinst_HEADERS=pho_cfg.h pho_comm.h pho_common.h pho_dss.h pho_io.h \
 #   - pho_attrs.h     access and manipulate object metadata
 include_HEADERS=pho_attrs.h phobos_store.h phobos_admin.h
 
-$(proto_headers): %.pb-c.h: $(protodir)/%.proto
-	$(MAKE) -C $(protodir) gen-proto
+$(proto_headers): $(protodir)/gen-proto.stamp
+
+$(protodir)/gen-proto.stamp:
+	$(MAKE) -C $(protodir) gen-proto.stamp
