cfg template: add LTO7 and LTO8 compatibility rules
Change-Id: I8643328669f2f58e6c482f42e1c47525bc88f98c
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/7590
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -50,15 +50,19 @@ default_family = tape
 #    drives).
 #############################################################
 
+# List of drive models implementing each generation of drive
+# (comma-separated lists without any space)
 [drive_type "LTO5_drive"]
-# List of drive models implementing LTO gen 5
-# (comma-separated list without any space)
 models = ULTRIUM-TD5,ULT3580-TD5,ULTRIUM-HH5,ULT3580-HH5,HH LTO Gen 5
 
 [drive_type "LTO6_drive"]
-# List of drive models implementing LTO gen 6
-# (comma-separated list without any space)
 models = ULTRIUM-TD6,ULT3580-TD6,ULTRIUM-HH6,ULT3580-HH6,HH LTO Gen 6
+
+[drive_type "LTO7_drive"]
+models = ULTRIUM-TD7,ULT3580-TD7,ULTRIUM-HH7,ULT3580-HH7,HH LTO Gen 7
+
+[drive_type "LTO8_drive"]
+models = ULTRIUM-TD8,ULT3580-TD8,ULTRIUM-HH8,ULT3580-HH8,HH LTO Gen 8
 
 [tape_model]
 # List of supported tape models (checked by "phobos tape add ...")
@@ -66,12 +70,16 @@ models = ULTRIUM-TD6,ULT3580-TD6,ULTRIUM-HH6,ULT3580-HH6,HH LTO Gen 6
 # default: LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
 #supported_list = LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
 
+# List of drive types that can write each tape generation
+# (comma-separated lists without any space)
 [tape_type "LTO5"]
-# List of drive types that can write LTO5 tapes
-# (comma-separated list without any space)
 drive_rw = LTO5_drive,LTO6_drive
 
 [tape_type "LTO6"]
-# List of drive types that can write LTO6 tapes
-# (comma-separated list without any space)
-drive_rw = LTO6_drive
+drive_rw = LTO6_drive,LTO7_drive
+
+[tape_type "LTO7"]
+drive_rw = LTO7_drive,LTO8_drive
+
+[tape_type "LTO8"]
+drive_rw = LTO8_drive
